sintatico.output
State 99 conflicts: 1 shift/reduce


Grammar

    0 $accept: PROGRAMA $end

    1 PROGRAMA: DECLARACAOLISTA

    2 DECLARACAOLISTA: DECLARACAOLISTA DECLARACAO
    3                | DECLARACAO

    4 DECLARACAO: VARDECLARACAO
    5           | FUNDECLARACAO

    6 VARDECLARACAO: TIPOESPECIFICADOR ID PONTOEVIRGULA
    7              | TIPOESPECIFICADOR ID ABRECOLCHETE NUM FECHACOLCHETE PONTOEVIRGULA

    8 TIPOESPECIFICADOR: INT
    9                  | VOID
   10                  | STR

   11 FUNDECLARACAO: TIPOESPECIFICADOR ID ABREPARENTESIS PARAMS FECHAPARENTESIS COMPOSTODECL

   12 PARAMS: PARAMLISTA
   13       | VOID
   14       | /* empty */

   15 PARAMLISTA: PARAMLISTA VIRGULA PARAM
   16           | PARAM

   17 PARAM: TIPOESPECIFICADOR ID
   18      | TIPOESPECIFICADOR ID ABRECOLCHETE FECHACOLCHETE

   19 COMPOSTODECL: ABRECHAVES LOCALDECLARACOES STATEMENTLISTA FECHACHAVES

   20 LOCALDECLARACOES: LOCALDECLARACOES VARDECLARACAO
   21                 | /* empty */

   22 STATEMENTLISTA: STATEMENTLISTA STATEMENT
   23               | /* empty */

   24 STATEMENT: EXPRESSAODECL
   25          | COMPOSTODECL
   26          | SELECAODECL
   27          | ITERACAODECL
   28          | RETORNODECL

   29 EXPRESSAODECL: EXPRESSAO PONTOEVIRGULA
   30              | PONTOEVIRGULA

   31 SELECAODECL: IF ABREPARENTESIS EXPRESSAO FECHAPARENTESIS STATEMENT
   32            | IF ABREPARENTESIS EXPRESSAO FECHAPARENTESIS STATEMENT ELSE STATEMENT

   33 ITERACAODECL: WHILE ABREPARENTESIS EXPRESSAO FECHAPARENTESIS STATEMENT

   34 RETORNODECL: RETURN PONTOEVIRGULA
   35            | RETURN EXPRESSAO PONTOEVIRGULA

   36 EXPRESSAO: VAR ATRIBUICAO EXPRESSAO
   37          | SIMPLESEXPRESSAO

   38 VAR: ID
   39    | ID ABRECOLCHETE EXPRESSAO FECHACOLCHETE

   40 SIMPLESEXPRESSAO: SIMPLESEXPRESSAO RELACIONAL SOMAEXPRESSAO
   41                 | SOMAEXPRESSAO

   42 RELACIONAL: MENORIGUAL
   43           | MENOR
   44           | MAIOR
   45           | MAIORIGUAL
   46           | IGUAL
   47           | DIFERENTE

   48 SOMAEXPRESSAO: SOMAEXPRESSAO SOMA TERMO
   49              | TERMO

   50 SOMA: MAIS
   51     | MENOS

   52 TERMO: TERMO MULT FATOR
   53      | FATOR

   54 MULT: ASTERISCO
   55     | BARRA

   56 FATOR: ABREPARENTESIS EXPRESSAO FECHAPARENTESIS
   57      | VAR
   58      | ATIVACAO
   59      | NUM
   60      | STRSTR

   61 ATIVACAO: ID ABREPARENTESIS ARGS FECHAPARENTESIS

   62 ARGS: ARGLISTA
   63     | /* empty */

   64 ARGLISTA: ARGLISTA VIRGULA EXPRESSAO
   65         | EXPRESSAO


Terminals, with rules where they appear

$end (0) 0
error (256)
ELSE (258) 32
IF (259) 31 32
INT (260) 8
STR (261) 10
RETURN (262) 34 35
VOID (263) 9 13
WHILE (264) 33
MAIS (265) 50
MENOS (266) 51
ASTERISCO (267) 54
BARRA (268) 55
MENOR (269) 43
MENORIGUAL (270) 42
MAIOR (271) 44
MAIORIGUAL (272) 45
IGUAL (273) 46
DIFERENTE (274) 47
ATRIBUICAO (275) 36
PONTOEVIRGULA (276) 6 7 29 30 34 35
VIRGULA (277) 15 64
ABREPARENTESIS (278) 11 31 32 33 56 61
FECHAPARENTESIS (279) 11 31 32 33 56 61
ABRECOLCHETE (280) 7 18 39
FECHACOLCHETE (281) 7 18 39
ABRECHAVES (282) 19
FECHACHAVES (283) 19
NUM (284) 7 59
STRSTR (285) 60
ID (286) 6 7 11 17 18 38 39 61


Nonterminals, with rules where they appear

$accept (32)
    on left: 0
PROGRAMA (33)
    on left: 1, on right: 0
DECLARACAOLISTA (34)
    on left: 2 3, on right: 1 2
DECLARACAO (35)
    on left: 4 5, on right: 2 3
VARDECLARACAO (36)
    on left: 6 7, on right: 4 20
TIPOESPECIFICADOR (37)
    on left: 8 9 10, on right: 6 7 11 17 18
FUNDECLARACAO (38)
    on left: 11, on right: 5
PARAMS (39)
    on left: 12 13 14, on right: 11
PARAMLISTA (40)
    on left: 15 16, on right: 12 15
PARAM (41)
    on left: 17 18, on right: 15 16
COMPOSTODECL (42)
    on left: 19, on right: 11 25
LOCALDECLARACOES (43)
    on left: 20 21, on right: 19 20
STATEMENTLISTA (44)
    on left: 22 23, on right: 19 22
STATEMENT (45)
    on left: 24 25 26 27 28, on right: 22 31 32 33
EXPRESSAODECL (46)
    on left: 29 30, on right: 24
SELECAODECL (47)
    on left: 31 32, on right: 26
ITERACAODECL (48)
    on left: 33, on right: 27
RETORNODECL (49)
    on left: 34 35, on right: 28
EXPRESSAO (50)
    on left: 36 37, on right: 29 31 32 33 35 36 39 56 64 65
VAR (51)
    on left: 38 39, on right: 36 57
SIMPLESEXPRESSAO (52)
    on left: 40 41, on right: 37 40
RELACIONAL (53)
    on left: 42 43 44 45 46 47, on right: 40
SOMAEXPRESSAO (54)
    on left: 48 49, on right: 40 41 48
SOMA (55)
    on left: 50 51, on right: 48
TERMO (56)
    on left: 52 53, on right: 48 49 52
MULT (57)
    on left: 54 55, on right: 52
FATOR (58)
    on left: 56 57 58 59 60, on right: 52 53
ATIVACAO (59)
    on left: 61, on right: 58
ARGS (60)
    on left: 62 63, on right: 61
ARGLISTA (61)
    on left: 64 65, on right: 62 64


state 0

    0 $accept: . PROGRAMA $end

    INT   shift, and go to state 1
    STR   shift, and go to state 2
    VOID  shift, and go to state 3

    PROGRAMA           go to state 4
    DECLARACAOLISTA    go to state 5
    DECLARACAO         go to state 6
    VARDECLARACAO      go to state 7
    TIPOESPECIFICADOR  go to state 8
    FUNDECLARACAO      go to state 9


state 1

    8 TIPOESPECIFICADOR: INT .

    $default  reduce using rule 8 (TIPOESPECIFICADOR)


state 2

   10 TIPOESPECIFICADOR: STR .

    $default  reduce using rule 10 (TIPOESPECIFICADOR)


state 3

    9 TIPOESPECIFICADOR: VOID .

    $default  reduce using rule 9 (TIPOESPECIFICADOR)


state 4

    0 $accept: PROGRAMA . $end

    $end  shift, and go to state 10


state 5

    1 PROGRAMA: DECLARACAOLISTA .
    2 DECLARACAOLISTA: DECLARACAOLISTA . DECLARACAO

    INT   shift, and go to state 1
    STR   shift, and go to state 2
    VOID  shift, and go to state 3

    $default  reduce using rule 1 (PROGRAMA)

    DECLARACAO         go to state 11
    VARDECLARACAO      go to state 7
    TIPOESPECIFICADOR  go to state 8
    FUNDECLARACAO      go to state 9


state 6

    3 DECLARACAOLISTA: DECLARACAO .

    $default  reduce using rule 3 (DECLARACAOLISTA)


state 7

    4 DECLARACAO: VARDECLARACAO .

    $default  reduce using rule 4 (DECLARACAO)


state 8

    6 VARDECLARACAO: TIPOESPECIFICADOR . ID PONTOEVIRGULA
    7              | TIPOESPECIFICADOR . ID ABRECOLCHETE NUM FECHACOLCHETE PONTOEVIRGULA
   11 FUNDECLARACAO: TIPOESPECIFICADOR . ID ABREPARENTESIS PARAMS FECHAPARENTESIS COMPOSTODECL

    ID  shift, and go to state 12


state 9

    5 DECLARACAO: FUNDECLARACAO .

    $default  reduce using rule 5 (DECLARACAO)


state 10

    0 $accept: PROGRAMA $end .

    $default  accept


state 11

    2 DECLARACAOLISTA: DECLARACAOLISTA DECLARACAO .

    $default  reduce using rule 2 (DECLARACAOLISTA)


state 12

    6 VARDECLARACAO: TIPOESPECIFICADOR ID . PONTOEVIRGULA
    7              | TIPOESPECIFICADOR ID . ABRECOLCHETE NUM FECHACOLCHETE PONTOEVIRGULA
   11 FUNDECLARACAO: TIPOESPECIFICADOR ID . ABREPARENTESIS PARAMS FECHAPARENTESIS COMPOSTODECL

    PONTOEVIRGULA   shift, and go to state 13
    ABREPARENTESIS  shift, and go to state 14
    ABRECOLCHETE    shift, and go to state 15


state 13

    6 VARDECLARACAO: TIPOESPECIFICADOR ID PONTOEVIRGULA .

    $default  reduce using rule 6 (VARDECLARACAO)


state 14

   11 FUNDECLARACAO: TIPOESPECIFICADOR ID ABREPARENTESIS . PARAMS FECHAPARENTESIS COMPOSTODECL

    INT   shift, and go to state 1
    STR   shift, and go to state 2
    VOID  shift, and go to state 16

    $default  reduce using rule 14 (PARAMS)

    TIPOESPECIFICADOR  go to state 17
    PARAMS             go to state 18
    PARAMLISTA         go to state 19
    PARAM              go to state 20


state 15

    7 VARDECLARACAO: TIPOESPECIFICADOR ID ABRECOLCHETE . NUM FECHACOLCHETE PONTOEVIRGULA

    NUM  shift, and go to state 21


state 16

    9 TIPOESPECIFICADOR: VOID .
   13 PARAMS: VOID .

    FECHAPARENTESIS  reduce using rule 13 (PARAMS)
    $default         reduce using rule 9 (TIPOESPECIFICADOR)


state 17

   17 PARAM: TIPOESPECIFICADOR . ID
   18      | TIPOESPECIFICADOR . ID ABRECOLCHETE FECHACOLCHETE

    ID  shift, and go to state 22


state 18

   11 FUNDECLARACAO: TIPOESPECIFICADOR ID ABREPARENTESIS PARAMS . FECHAPARENTESIS COMPOSTODECL

    FECHAPARENTESIS  shift, and go to state 23


state 19

   12 PARAMS: PARAMLISTA .
   15 PARAMLISTA: PARAMLISTA . VIRGULA PARAM

    VIRGULA  shift, and go to state 24

    $default  reduce using rule 12 (PARAMS)


state 20

   16 PARAMLISTA: PARAM .

    $default  reduce using rule 16 (PARAMLISTA)


state 21

    7 VARDECLARACAO: TIPOESPECIFICADOR ID ABRECOLCHETE NUM . FECHACOLCHETE PONTOEVIRGULA

    FECHACOLCHETE  shift, and go to state 25


state 22

   17 PARAM: TIPOESPECIFICADOR ID .
   18      | TIPOESPECIFICADOR ID . ABRECOLCHETE FECHACOLCHETE

    ABRECOLCHETE  shift, and go to state 26

    $default  reduce using rule 17 (PARAM)


state 23

   11 FUNDECLARACAO: TIPOESPECIFICADOR ID ABREPARENTESIS PARAMS FECHAPARENTESIS . COMPOSTODECL

    ABRECHAVES  shift, and go to state 27

    COMPOSTODECL  go to state 28


state 24

   15 PARAMLISTA: PARAMLISTA VIRGULA . PARAM

    INT   shift, and go to state 1
    STR   shift, and go to state 2
    VOID  shift, and go to state 3

    TIPOESPECIFICADOR  go to state 17
    PARAM              go to state 29


state 25

    7 VARDECLARACAO: TIPOESPECIFICADOR ID ABRECOLCHETE NUM FECHACOLCHETE . PONTOEVIRGULA

    PONTOEVIRGULA  shift, and go to state 30


state 26

   18 PARAM: TIPOESPECIFICADOR ID ABRECOLCHETE . FECHACOLCHETE

    FECHACOLCHETE  shift, and go to state 31


state 27

   19 COMPOSTODECL: ABRECHAVES . LOCALDECLARACOES STATEMENTLISTA FECHACHAVES

    $default  reduce using rule 21 (LOCALDECLARACOES)

    LOCALDECLARACOES  go to state 32


state 28

   11 FUNDECLARACAO: TIPOESPECIFICADOR ID ABREPARENTESIS PARAMS FECHAPARENTESIS COMPOSTODECL .

    $default  reduce using rule 11 (FUNDECLARACAO)


state 29

   15 PARAMLISTA: PARAMLISTA VIRGULA PARAM .

    $default  reduce using rule 15 (PARAMLISTA)


state 30

    7 VARDECLARACAO: TIPOESPECIFICADOR ID ABRECOLCHETE NUM FECHACOLCHETE PONTOEVIRGULA .

    $default  reduce using rule 7 (VARDECLARACAO)


state 31

   18 PARAM: TIPOESPECIFICADOR ID ABRECOLCHETE FECHACOLCHETE .

    $default  reduce using rule 18 (PARAM)


state 32

   19 COMPOSTODECL: ABRECHAVES LOCALDECLARACOES . STATEMENTLISTA FECHACHAVES
   20 LOCALDECLARACOES: LOCALDECLARACOES . VARDECLARACAO

    INT   shift, and go to state 1
    STR   shift, and go to state 2
    VOID  shift, and go to state 3

    $default  reduce using rule 23 (STATEMENTLISTA)

    VARDECLARACAO      go to state 33
    TIPOESPECIFICADOR  go to state 34
    STATEMENTLISTA     go to state 35


state 33

   20 LOCALDECLARACOES: LOCALDECLARACOES VARDECLARACAO .

    $default  reduce using rule 20 (LOCALDECLARACOES)


state 34

    6 VARDECLARACAO: TIPOESPECIFICADOR . ID PONTOEVIRGULA
    7              | TIPOESPECIFICADOR . ID ABRECOLCHETE NUM FECHACOLCHETE PONTOEVIRGULA

    ID  shift, and go to state 36


state 35

   19 COMPOSTODECL: ABRECHAVES LOCALDECLARACOES STATEMENTLISTA . FECHACHAVES
   22 STATEMENTLISTA: STATEMENTLISTA . STATEMENT

    IF              shift, and go to state 37
    RETURN          shift, and go to state 38
    WHILE           shift, and go to state 39
    PONTOEVIRGULA   shift, and go to state 40
    ABREPARENTESIS  shift, and go to state 41
    ABRECHAVES      shift, and go to state 27
    FECHACHAVES     shift, and go to state 42
    NUM             shift, and go to state 43
    STRSTR          shift, and go to state 44
    ID              shift, and go to state 45

    COMPOSTODECL      go to state 46
    STATEMENT         go to state 47
    EXPRESSAODECL     go to state 48
    SELECAODECL       go to state 49
    ITERACAODECL      go to state 50
    RETORNODECL       go to state 51
    EXPRESSAO         go to state 52
    VAR               go to state 53
    SIMPLESEXPRESSAO  go to state 54
    SOMAEXPRESSAO     go to state 55
    TERMO             go to state 56
    FATOR             go to state 57
    ATIVACAO          go to state 58


state 36

    6 VARDECLARACAO: TIPOESPECIFICADOR ID . PONTOEVIRGULA
    7              | TIPOESPECIFICADOR ID . ABRECOLCHETE NUM FECHACOLCHETE PONTOEVIRGULA

    PONTOEVIRGULA  shift, and go to state 13
    ABRECOLCHETE   shift, and go to state 15


state 37

   31 SELECAODECL: IF . ABREPARENTESIS EXPRESSAO FECHAPARENTESIS STATEMENT
   32            | IF . ABREPARENTESIS EXPRESSAO FECHAPARENTESIS STATEMENT ELSE STATEMENT

    ABREPARENTESIS  shift, and go to state 59


state 38

   34 RETORNODECL: RETURN . PONTOEVIRGULA
   35            | RETURN . EXPRESSAO PONTOEVIRGULA

    PONTOEVIRGULA   shift, and go to state 60
    ABREPARENTESIS  shift, and go to state 41
    NUM             shift, and go to state 43
    STRSTR          shift, and go to state 44
    ID              shift, and go to state 45

    EXPRESSAO         go to state 61
    VAR               go to state 53
    SIMPLESEXPRESSAO  go to state 54
    SOMAEXPRESSAO     go to state 55
    TERMO             go to state 56
    FATOR             go to state 57
    ATIVACAO          go to state 58


state 39

   33 ITERACAODECL: WHILE . ABREPARENTESIS EXPRESSAO FECHAPARENTESIS STATEMENT

    ABREPARENTESIS  shift, and go to state 62


state 40

   30 EXPRESSAODECL: PONTOEVIRGULA .

    $default  reduce using rule 30 (EXPRESSAODECL)


state 41

   56 FATOR: ABREPARENTESIS . EXPRESSAO FECHAPARENTESIS

    ABREPARENTESIS  shift, and go to state 41
    NUM             shift, and go to state 43
    STRSTR          shift, and go to state 44
    ID              shift, and go to state 45

    EXPRESSAO         go to state 63
    VAR               go to state 53
    SIMPLESEXPRESSAO  go to state 54
    SOMAEXPRESSAO     go to state 55
    TERMO             go to state 56
    FATOR             go to state 57
    ATIVACAO          go to state 58


state 42

   19 COMPOSTODECL: ABRECHAVES LOCALDECLARACOES STATEMENTLISTA FECHACHAVES .

    $default  reduce using rule 19 (COMPOSTODECL)


state 43

   59 FATOR: NUM .

    $default  reduce using rule 59 (FATOR)


state 44

   60 FATOR: STRSTR .

    $default  reduce using rule 60 (FATOR)


state 45

   38 VAR: ID .
   39    | ID . ABRECOLCHETE EXPRESSAO FECHACOLCHETE
   61 ATIVACAO: ID . ABREPARENTESIS ARGS FECHAPARENTESIS

    ABREPARENTESIS  shift, and go to state 64
    ABRECOLCHETE    shift, and go to state 65

    $default  reduce using rule 38 (VAR)


state 46

   25 STATEMENT: COMPOSTODECL .

    $default  reduce using rule 25 (STATEMENT)


state 47

   22 STATEMENTLISTA: STATEMENTLISTA STATEMENT .

    $default  reduce using rule 22 (STATEMENTLISTA)


state 48

   24 STATEMENT: EXPRESSAODECL .

    $default  reduce using rule 24 (STATEMENT)


state 49

   26 STATEMENT: SELECAODECL .

    $default  reduce using rule 26 (STATEMENT)


state 50

   27 STATEMENT: ITERACAODECL .

    $default  reduce using rule 27 (STATEMENT)


state 51

   28 STATEMENT: RETORNODECL .

    $default  reduce using rule 28 (STATEMENT)


state 52

   29 EXPRESSAODECL: EXPRESSAO . PONTOEVIRGULA

    PONTOEVIRGULA  shift, and go to state 66


state 53

   36 EXPRESSAO: VAR . ATRIBUICAO EXPRESSAO
   57 FATOR: VAR .

    ATRIBUICAO  shift, and go to state 67

    $default  reduce using rule 57 (FATOR)


state 54

   37 EXPRESSAO: SIMPLESEXPRESSAO .
   40 SIMPLESEXPRESSAO: SIMPLESEXPRESSAO . RELACIONAL SOMAEXPRESSAO

    MENOR       shift, and go to state 68
    MENORIGUAL  shift, and go to state 69
    MAIOR       shift, and go to state 70
    MAIORIGUAL  shift, and go to state 71
    IGUAL       shift, and go to state 72
    DIFERENTE   shift, and go to state 73

    $default  reduce using rule 37 (EXPRESSAO)

    RELACIONAL  go to state 74


state 55

   41 SIMPLESEXPRESSAO: SOMAEXPRESSAO .
   48 SOMAEXPRESSAO: SOMAEXPRESSAO . SOMA TERMO

    MAIS   shift, and go to state 75
    MENOS  shift, and go to state 76

    $default  reduce using rule 41 (SIMPLESEXPRESSAO)

    SOMA  go to state 77


state 56

   49 SOMAEXPRESSAO: TERMO .
   52 TERMO: TERMO . MULT FATOR

    ASTERISCO  shift, and go to state 78
    BARRA      shift, and go to state 79

    $default  reduce using rule 49 (SOMAEXPRESSAO)

    MULT  go to state 80


state 57

   53 TERMO: FATOR .

    $default  reduce using rule 53 (TERMO)


state 58

   58 FATOR: ATIVACAO .

    $default  reduce using rule 58 (FATOR)


state 59

   31 SELECAODECL: IF ABREPARENTESIS . EXPRESSAO FECHAPARENTESIS STATEMENT
   32            | IF ABREPARENTESIS . EXPRESSAO FECHAPARENTESIS STATEMENT ELSE STATEMENT

    ABREPARENTESIS  shift, and go to state 41
    NUM             shift, and go to state 43
    STRSTR          shift, and go to state 44
    ID              shift, and go to state 45

    EXPRESSAO         go to state 81
    VAR               go to state 53
    SIMPLESEXPRESSAO  go to state 54
    SOMAEXPRESSAO     go to state 55
    TERMO             go to state 56
    FATOR             go to state 57
    ATIVACAO          go to state 58


state 60

   34 RETORNODECL: RETURN PONTOEVIRGULA .

    $default  reduce using rule 34 (RETORNODECL)


state 61

   35 RETORNODECL: RETURN EXPRESSAO . PONTOEVIRGULA

    PONTOEVIRGULA  shift, and go to state 82


state 62

   33 ITERACAODECL: WHILE ABREPARENTESIS . EXPRESSAO FECHAPARENTESIS STATEMENT

    ABREPARENTESIS  shift, and go to state 41
    NUM             shift, and go to state 43
    STRSTR          shift, and go to state 44
    ID              shift, and go to state 45

    EXPRESSAO         go to state 83
    VAR               go to state 53
    SIMPLESEXPRESSAO  go to state 54
    SOMAEXPRESSAO     go to state 55
    TERMO             go to state 56
    FATOR             go to state 57
    ATIVACAO          go to state 58


state 63

   56 FATOR: ABREPARENTESIS EXPRESSAO . FECHAPARENTESIS

    FECHAPARENTESIS  shift, and go to state 84


state 64

   61 ATIVACAO: ID ABREPARENTESIS . ARGS FECHAPARENTESIS

    ABREPARENTESIS  shift, and go to state 41
    NUM             shift, and go to state 43
    STRSTR          shift, and go to state 44
    ID              shift, and go to state 45

    $default  reduce using rule 63 (ARGS)

    EXPRESSAO         go to state 85
    VAR               go to state 53
    SIMPLESEXPRESSAO  go to state 54
    SOMAEXPRESSAO     go to state 55
    TERMO             go to state 56
    FATOR             go to state 57
    ATIVACAO          go to state 58
    ARGS              go to state 86
    ARGLISTA          go to state 87


state 65

   39 VAR: ID ABRECOLCHETE . EXPRESSAO FECHACOLCHETE

    ABREPARENTESIS  shift, and go to state 41
    NUM             shift, and go to state 43
    STRSTR          shift, and go to state 44
    ID              shift, and go to state 45

    EXPRESSAO         go to state 88
    VAR               go to state 53
    SIMPLESEXPRESSAO  go to state 54
    SOMAEXPRESSAO     go to state 55
    TERMO             go to state 56
    FATOR             go to state 57
    ATIVACAO          go to state 58


state 66

   29 EXPRESSAODECL: EXPRESSAO PONTOEVIRGULA .

    $default  reduce using rule 29 (EXPRESSAODECL)


state 67

   36 EXPRESSAO: VAR ATRIBUICAO . EXPRESSAO

    ABREPARENTESIS  shift, and go to state 41
    NUM             shift, and go to state 43
    STRSTR          shift, and go to state 44
    ID              shift, and go to state 45

    EXPRESSAO         go to state 89
    VAR               go to state 53
    SIMPLESEXPRESSAO  go to state 54
    SOMAEXPRESSAO     go to state 55
    TERMO             go to state 56
    FATOR             go to state 57
    ATIVACAO          go to state 58


state 68

   43 RELACIONAL: MENOR .

    $default  reduce using rule 43 (RELACIONAL)


state 69

   42 RELACIONAL: MENORIGUAL .

    $default  reduce using rule 42 (RELACIONAL)


state 70

   44 RELACIONAL: MAIOR .

    $default  reduce using rule 44 (RELACIONAL)


state 71

   45 RELACIONAL: MAIORIGUAL .

    $default  reduce using rule 45 (RELACIONAL)


state 72
